--- a/AWS_Dashboard/index.html
+++ b/AWS_Dashboard/index.html
@@ -7,20 +7,92 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dashboard</title>
     <style>
-          h1 {
-              font-family: Consolas, sans-serif;
-              text-align: center;
-              display: flex;
-              align-items: center;
-          }
-      </style>
+        h1 {
+            font-family: Consolas, sans-serif;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        body {
+            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        .input-container {
+            display: grid;
+            grid-template-columns: auto 1fr auto 1fr auto 1fr auto 1fr auto;
+            grid-gap: 10px;
+            align-items: center;
+            justify-content: space-between;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        label {
+            display: inline-block;
+            width: 60px;
+            text-align: right;
+        }
+
+        input[type="number"] {
+            width: 60px;
+            padding: 5px;
+            font-size: 18px;
+            border-radius: 5px;
+            border: 2px solid #ccc;
+            text-align: center;
+            border-width: 2px;
+            cursor: ns-resize;
+        }
+
+        button {
+            padding: 8px;
+            font-size: 18px;
+            border-radius: 8px;
+            border: none;
+            background-color: #4caf50;
+            color: #fff;
+            cursor: pointer;
+            border-width: 2px;
+        }
+
+        button:hover {
+            background-color: #3e8e41;
+        }
+
+        select {
+            cursor: pointer;
+            min-width: 120px;
+            font-size: 18px;
+            padding: 5px;
+            border-radius: 5px;
+            border: 2px solid #ccc;
+            text-align-last: center;
+            -moz-text-align-last: center;
+            border-width: 2px;
+        }
+    </style>
 </head>
 
 <body>
-  <header>
-    <h1>NB-IoT Dashboard</h1>
-  </header>
-  <div id="mainContainer"></div> 
+    <header>
+        <h1>NB-IoT Dashboard</h1>
+    </header>
+    <div class="input-container">
+        <label for="node-input">Node:</label>
+        <select id="node-input" name="node-input"></select>
+        <label for="hours">Hours:</label>
+        <input type="number" id="hours" value="0" min="0" max="48" step="1" />
+        <label for="minutes">Minutes:</label>
+        <input type="number" id="minutes" value="0" min="0" max="59" step="1" />
+        <label for="seconds">Seconds:</label>
+        <input type="number" id="seconds" value="0" min="0" max="55" step="5" />
+        <button id="publish-button">Update period</button>
+    </div>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.906.0.min.js"></script>
+
+    <div id="mainContainer"></div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="./script.js"></script>
