Add functionality to ask concentrator for nodes mmt period whenever switched to live mode.

--- a/AWS_Dashboard/dashboard_csv_data/index.html
+++ b/AWS_Dashboard/dashboard_csv_data/index.html
@@ -25,7 +25,7 @@
             grid-gap: 10px;
             align-items: center;
             justify-content: space-between;
-            max-width: 1200px;
+            max-width: 1300px;
             margin: 0 auto;
         }
 
@@ -41,9 +41,9 @@
             padding: 5px;
             font-size: 20px;
             border-radius: 5px;
-            border: 2px solid #ccc;
+            border: 3px solid #ccc;
             text-align: center;
-            border-width: 2px;
+            border-width: 3px;
             cursor: ns-resize;
         }
 
@@ -52,9 +52,9 @@
             padding: 5px;
             font-size: 20px;
             border-radius: 5px;
-            border: 2px solid #ccc;
+            border: 3px solid #ccc;
             text-align: center;
-            border-width: 2px;
+            border-width: 3px;
         }
         input[type="date"]::-webkit-calendar-picker-indicator:hover {
             cursor: pointer;
@@ -68,7 +68,7 @@
             background-color: #374137;
             color: #fff;
             cursor: pointer;
-            border-width: 2px;
+            border-width: 3px;
             width: 160px
         }
 
@@ -78,14 +78,14 @@
 
         select {
             cursor: pointer;
-            min-width: 120px;
+            min-width: 220px;
             font-size: 20px;
             padding: 5px;
             border-radius: 5px;
-            border: 2px solid #ccc;
+            border: 3px solid #ccc;
             text-align-last: center;
             -moz-text-align-last: center;
-            border-width: 2px;
+            border-width: 3px;
         }
 
         #from-date-label {
@@ -100,7 +100,7 @@
             background-color: #008eb9;
             color: #fff;
             cursor: pointer;
-            border-width: 2px;
+            border-width: 3px;
             grid-column-start: 6;
         }
         #download-btn:hover {
@@ -115,7 +115,7 @@
             background-color: #4caf50;
             color: #fff;
             cursor: pointer;
-            border-width: 2px;
+            border: 3px solid #ccc;
             grid-column-start: 4;
         }
         #show-btn:hover {
@@ -130,11 +130,16 @@
             background-color: #ff5100;
             color: #fff;
             cursor: pointer;
-            border-width: 2px;
+            border-width: 3px;
             grid-column-start: 5;
+            border: 3px solid #ccc;
         }
         #live-btn:hover {
             background-color: #cf4200;
+        }
+
+        .active {
+            border: 3px solid black;
         }
     </style>
 </head>
